--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\WSI\AppData\Local\Temp\testng-eclipse--1095241311\testng-customsuite.xml</span>
+                    <span>C:\Users\WSI\AppData\Local\Temp\testng-eclipse--523577892\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,32 +103,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.DDTests" class="method navigator-link" hash-for-method="testDeleteUserByName(testuser1)">testDeleteUserByName(testuser1)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="api.test.userTest" class="method navigator-link" hash-for-method="testDeleteUser">testDeleteUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.DDTests" class="method navigator-link" hash-for-method="testDeleteUserByName(testuser2)">testDeleteUserByName(testuser2)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="api.test.userTest" class="method navigator-link" hash-for-method="testGetUser">testGetUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.DDTests" class="method navigator-link" hash-for-method="testDeleteUserByName(testuser3)">testDeleteUserByName(testuser3)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="api.test.userTest" class="method navigator-link" hash-for-method="testPostUser">testPostUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.DDTests" class="method navigator-link" hash-for-method="testPostUser(1010, testuser1, John, Kenedy, test1@gmail.com, 12345, 9887363330)">testPostUser(1010, testuser1, John, Kenedy, test1@gmail.com, 12345, 9887363330)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.DDTests" class="method navigator-link" hash-for-method="testPostUser(1039, testuser3, Steve, Smith, test3@gmail.com, 12345, 9464647474)">testPostUser(1039, testuser3, Steve, Smith, test3@gmail.com, 12345, 9464647474)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.DDTests" class="method navigator-link" hash-for-method="testPostUser(1020, testuser2, Kim, Kom, test2@gmail.com, 12345, 9447464990)">testPostUser(1020, testuser2, Kim, Kom, test2@gmail.com, 12345, 9447464990)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="api.test.userTest" class="method navigator-link" hash-for-method="test_UpdateUser">test_UpdateUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -146,55 +136,35 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">api.test.DDTests</span>
+              <span class="class-name">api.test.userTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testDeleteUserByName(testuser1)">
-                  </a> <!-- testDeleteUserByName(testuser1) -->
-                  <span class="method-name">testDeleteUserByName</span>
-                  <span class="parameters">(testuser1)</span>
+                  <a name="testDeleteUser">
+                  </a> <!-- testDeleteUser -->
+                  <span class="method-name">testDeleteUser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testDeleteUserByName(testuser2)">
-                  </a> <!-- testDeleteUserByName(testuser2) -->
-                  <span class="method-name">testDeleteUserByName</span>
-                  <span class="parameters">(testuser2)</span>
+                  <a name="testGetUser">
+                  </a> <!-- testGetUser -->
+                  <span class="method-name">testGetUser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testDeleteUserByName(testuser3)">
-                  </a> <!-- testDeleteUserByName(testuser3) -->
-                  <span class="method-name">testDeleteUserByName</span>
-                  <span class="parameters">(testuser3)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testPostUser(1010, testuser1, John, Kenedy, test1@gmail.com, 12345, 9887363330)">
-                  </a> <!-- testPostUser(1010, testuser1, John, Kenedy, test1@gmail.com, 12345, 9887363330) -->
+                  <a name="testPostUser">
+                  </a> <!-- testPostUser -->
                   <span class="method-name">testPostUser</span>
-                  <span class="parameters">(1010,testuser1,John,Kenedy,test1@gmail.com,12345,9887363330)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testPostUser(1039, testuser3, Steve, Smith, test3@gmail.com, 12345, 9464647474)">
-                  </a> <!-- testPostUser(1039, testuser3, Steve, Smith, test3@gmail.com, 12345, 9464647474) -->
-                  <span class="method-name">testPostUser</span>
-                  <span class="parameters">(1039,testuser3,Steve,Smith,test3@gmail.com,12345,9464647474)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testPostUser(1020, testuser2, Kim, Kom, test2@gmail.com, 12345, 9447464990)">
-                  </a> <!-- testPostUser(1020, testuser2, Kim, Kom, test2@gmail.com, 12345, 9447464990) -->
-                  <span class="method-name">testPostUser</span>
-                  <span class="parameters">(1020,testuser2,Kim,Kom,test2@gmail.com,12345,9447464990)</span>
+                  <a name="test_UpdateUser">
+                  </a> <!-- test_UpdateUser -->
+                  <span class="method-name">test_UpdateUser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -202,7 +172,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\WSI\AppData\Local\Temp\testng-eclipse--1095241311\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\WSI\AppData\Local\Temp\testng-eclipse--523577892\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -211,7 +181,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;api.test.DDTests&quot;/&gt;
+      &lt;class name=&quot;api.test.userTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -251,36 +221,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testPostUser')
-data.setCell(0, 2, 'api.test.DDTests')
-data.setCell(0, 3, 4534);
+data.setCell(0, 2, 'api.test.userTest')
+data.setCell(0, 3, 5008);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testDeleteUserByName')
-data.setCell(1, 2, 'api.test.DDTests')
-data.setCell(1, 3, 1499);
+data.setCell(1, 1, 'test_UpdateUser')
+data.setCell(1, 2, 'api.test.userTest')
+data.setCell(1, 3, 2568);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testPostUser')
-data.setCell(2, 2, 'api.test.DDTests')
-data.setCell(2, 3, 1420);
+data.setCell(2, 1, 'testGetUser')
+data.setCell(2, 2, 'api.test.userTest')
+data.setCell(2, 3, 1368);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testPostUser')
-data.setCell(3, 2, 'api.test.DDTests')
-data.setCell(3, 3, 1406);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'testDeleteUserByName')
-data.setCell(4, 2, 'api.test.DDTests')
-data.setCell(4, 3, 1276);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'testDeleteUserByName')
-data.setCell(5, 2, 'api.test.DDTests')
-data.setCell(5, 3, 1254);
+data.setCell(3, 1, 'testDeleteUser')
+data.setCell(3, 2, 'api.test.userTest')
+data.setCell(3, 3, 1181);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -306,30 +268,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">api.test.DDTests</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">testPostUser(1010, testuser1, John, Kenedy, test1@gmail.com, 12345, 9887363330)</span>
+              <div class="chronological-class-name">api.test.userTest</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setupUserData</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">testPostUser</span>
+                <span class="method-start">309 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testPostUser(1020, testuser2, Kim, Kom, test2@gmail.com, 12345, 9447464990)</span>
-                <span class="method-start">4538 ms</span>
+                <span class="method-name">testGetUser</span>
+                <span class="method-start">5322 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testPostUser(1039, testuser3, Steve, Smith, test3@gmail.com, 12345, 9464647474)</span>
-                <span class="method-start">5946 ms</span>
+                <span class="method-name">test_UpdateUser</span>
+                <span class="method-start">6692 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testDeleteUserByName(testuser1)</span>
-                <span class="method-start">7435 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testDeleteUserByName(testuser2)</span>
-                <span class="method-start">8935 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testDeleteUserByName(testuser3)</span>
-                <span class="method-start">10189 ms</span>
+                <span class="method-name">testDeleteUser</span>
+                <span class="method-start">9261 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
