--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8fad79">  <td>23/09/24 16:20:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testDeleteUserByName(java.lang.String)[pri:2, instance:api.test.DDTests@65e61854]">testDeleteUserByName</td> 
-  <td>main@793269462</td>   <td></td> </tr>
-<tr bgcolor="8fad79">  <td>23/09/24 16:20:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testDeleteUserByName(java.lang.String)[pri:2, instance:api.test.DDTests@65e61854]">testDeleteUserByName</td> 
-  <td>main@793269462</td>   <td></td> </tr>
-<tr bgcolor="8fad79">  <td>23/09/24 16:20:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testDeleteUserByName(java.lang.String)[pri:2, instance:api.test.DDTests@65e61854]">testDeleteUserByName</td> 
-  <td>main@793269462</td>   <td></td> </tr>
-<tr bgcolor="8fad79">  <td>23/09/24 16:20:33</td>   <td>-4243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testPostUser(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:api.test.DDTests@65e61854]">testPostUser</td> 
-  <td>main@793269462</td>   <td></td> </tr>
-<tr bgcolor="8fad79">  <td>23/09/24 16:20:33</td>   <td>-4243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testPostUser(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:api.test.DDTests@65e61854]">testPostUser</td> 
-  <td>main@793269462</td>   <td></td> </tr>
-<tr bgcolor="8fad79">  <td>23/09/24 16:20:33</td>   <td>-4243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testPostUser(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:api.test.DDTests@65e61854]">testPostUser</td> 
-  <td>main@793269462</td>   <td></td> </tr>
+<tr bgcolor="8fad79">  <td>23/09/27 12:55:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;userTest.setupUserData()[pri:0, instance:api.test.userTest@72f46e16]">&gt;&gt;setupUserData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690481990</td>   <td></td> </tr>
+<tr bgcolor="8fad79">  <td>23/09/27 12:55:14</td>   <td>9251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testDeleteUser()[pri:4, instance:api.test.userTest@72f46e16]">testDeleteUser</td> 
+  <td>main@1690481990</td>   <td></td> </tr>
+<tr bgcolor="8fad79">  <td>23/09/27 12:55:10</td>   <td>5312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testGetUser()[pri:2, instance:api.test.userTest@72f46e16]">testGetUser</td> 
+  <td>main@1690481990</td>   <td></td> </tr>
+<tr bgcolor="8fad79">  <td>23/09/27 12:55:05</td>   <td>299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testPostUser()[pri:1, instance:api.test.userTest@72f46e16]">testPostUser</td> 
+  <td>main@1690481990</td>   <td></td> </tr>
+<tr bgcolor="8fad79">  <td>23/09/27 12:55:12</td>   <td>6682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.test_UpdateUser()[pri:3, instance:api.test.userTest@72f46e16]">test_UpdateUser</td> 
+  <td>main@1690481990</td>   <td></td> </tr>
 </table>
