--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,14 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,488</td><td></td><td></td></tr>
+<tr><th colspan="8">PetSuite</th></tr>
+<tr><td><a href="#t0">PetTests</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">17,735</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">api.test.userTest</td><td><a href="#m0">testDeleteUser</a></td><td rowspan="1">1695790514701</td><td rowspan="1">1181</td></tr><tr class="passedeven"><td><a href="#m1">testGetUser</a></td><td rowspan="1">1695790510762</td><td rowspan="1">1368</td></tr><tr class="passedeven"><td><a href="#m2">testPostUser</a></td><td rowspan="1">1695790505749</td><td rowspan="1">5008</td></tr><tr class="passedeven"><td><a href="#m3">test_UpdateUser</a></td><td rowspan="1">1695790512132</td><td rowspan="1">2568</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">PetSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">PetTests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">api.test.storeTest</td><td><a href="#m0">createorder</a></td><td rowspan="1">1696257760612</td><td rowspan="1">1638</td></tr><tr class="passedeven"><td><a href="#m1">getorder</a></td><td rowspan="1">1696257762252</td><td rowspan="1">1329</td></tr><tr class="passedeven"><td><a href="#m2">getorderInventory</a></td><td rowspan="1">1696257763588</td><td rowspan="1">1382</td></tr><tr class="passedodd"><td rowspan="4">api.test.userTest</td><td><a href="#m3">testDeleteUser</a></td><td rowspan="1">1696257759183</td><td rowspan="1">1424</td></tr><tr class="passedodd"><td><a href="#m4">testGetUser</a></td><td rowspan="1">1696257752588</td><td rowspan="1">3039</td></tr><tr class="passedodd"><td><a href="#m5">testPostUser</a></td><td rowspan="1">1696257747731</td><td rowspan="1">4681</td></tr><tr class="passedodd"><td><a href="#m6">test_UpdateUser</a></td><td rowspan="1">1696257755630</td><td rowspan="1">3550</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">api.test.userTest#testDeleteUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">api.test.userTest#testGetUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">api.test.userTest#testPostUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">api.test.userTest#test_UpdateUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>PetTests</h2><h3 id="m0">api.test.storeTest#createorder</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">api.test.storeTest#getorder</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">api.test.storeTest#getorderInventory</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">api.test.userTest#testDeleteUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">api.test.userTest#testGetUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">api.test.userTest#testPostUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">api.test.userTest#test_UpdateUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
