--- a/test-output/old/PetSuite/methods-alphabetical.html
+++ b/test-output/old/PetSuite/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>PetSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be9289">  <td>23/09/24 15:02:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="storeTest.createorder()[pri:1, instance:api.test.storeTest@60bdf15d]">createorder</td> 
+<tr bgcolor="b465bf">  <td>23/10/02 22:42:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="storeTest.createorder()[pri:1, instance:api.test.storeTest@5f59185e]">createorder</td> 
   <td>main@1444494461</td>   <td></td> </tr>
-<tr bgcolor="be9289">  <td>23/09/24 15:02:46</td>   <td>1396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="storeTest.getorder()[pri:2, instance:api.test.storeTest@60bdf15d]">getorder</td> 
+<tr bgcolor="b465bf">  <td>23/10/02 22:42:42</td>   <td>1640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="storeTest.getorder()[pri:2, instance:api.test.storeTest@5f59185e]">getorder</td> 
   <td>main@1444494461</td>   <td></td> </tr>
-<tr bgcolor="be9289">  <td>23/09/24 15:02:47</td>   <td>2782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="storeTest.getorderInventory()[pri:3, instance:api.test.storeTest@60bdf15d]">getorderInventory</td> 
+<tr bgcolor="b465bf">  <td>23/10/02 22:42:43</td>   <td>2976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="storeTest.getorderInventory()[pri:3, instance:api.test.storeTest@5f59185e]">getorderInventory</td> 
   <td>main@1444494461</td>   <td></td> </tr>
-<tr bgcolor="9cbfaf">  <td>23/09/24 15:02:34</td>   <td>-10800</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;userTest.setupUserData()[pri:0, instance:api.test.userTest@2484f433]">&gt;&gt;setupUserData</td> 
+<tr bgcolor="686f9a">  <td>23/10/02 22:42:27</td>   <td>-13111</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;userTest.setupUserData()[pri:0, instance:api.test.userTest@34645867]">&gt;&gt;setupUserData</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1444494461</td>   <td></td> </tr>
-<tr bgcolor="9cbfaf">  <td>23/09/24 15:02:43</td>   <td>-1338</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testDeleteUser()[pri:4, instance:api.test.userTest@2484f433]">testDeleteUser</td> 
+<tr bgcolor="686f9a">  <td>23/10/02 22:42:39</td>   <td>-1429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testDeleteUser()[pri:4, instance:api.test.userTest@34645867]">testDeleteUser</td> 
   <td>main@1444494461</td>   <td></td> </tr>
-<tr bgcolor="9cbfaf">  <td>23/09/24 15:02:38</td>   <td>-6286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testGetUser()[pri:2, instance:api.test.userTest@2484f433]">testGetUser</td> 
+<tr bgcolor="686f9a">  <td>23/10/02 22:42:32</td>   <td>-8024</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testGetUser()[pri:2, instance:api.test.userTest@34645867]">testGetUser</td> 
   <td>main@1444494461</td>   <td></td> </tr>
-<tr bgcolor="9cbfaf">  <td>23/09/24 15:02:34</td>   <td>-10591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testPostUser()[pri:1, instance:api.test.userTest@2484f433]">testPostUser</td> 
+<tr bgcolor="686f9a">  <td>23/10/02 22:42:27</td>   <td>-12881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testPostUser()[pri:1, instance:api.test.userTest@34645867]">testPostUser</td> 
   <td>main@1444494461</td>   <td></td> </tr>
-<tr bgcolor="9cbfaf">  <td>23/09/24 15:02:40</td>   <td>-4878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.test_UpdateUser()[pri:3, instance:api.test.userTest@2484f433]">test_UpdateUser</td> 
+<tr bgcolor="686f9a">  <td>23/10/02 22:42:35</td>   <td>-4982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.test_UpdateUser()[pri:3, instance:api.test.userTest@34645867]">test_UpdateUser</td> 
   <td>main@1444494461</td>   <td></td> </tr>
 </table>
