--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c79cf">  <td>23/10/02 21:59:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;userTest.setupUserData()[pri:0, instance:api.test.userTest@e3b0369]">&gt;&gt;setupUserData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@817994751</td>   <td></td> </tr>
-<tr bgcolor="6c79cf">  <td>23/10/02 22:00:04</td>   <td>10177</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testDeleteUser()[pri:4, instance:api.test.userTest@e3b0369]">testDeleteUser</td> 
-  <td>main@817994751</td>   <td></td> </tr>
-<tr bgcolor="6c79cf">  <td>23/10/02 21:59:59</td>   <td>5670</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testGetUser()[pri:2, instance:api.test.userTest@e3b0369]">testGetUser</td> 
-  <td>main@817994751</td>   <td></td> </tr>
-<tr bgcolor="6c79cf">  <td>23/10/02 21:59:54</td>   <td>391</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testPostUser()[pri:1, instance:api.test.userTest@e3b0369]">testPostUser</td> 
-  <td>main@817994751</td>   <td></td> </tr>
-<tr bgcolor="6c79cf">  <td>23/10/02 22:00:01</td>   <td>7215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.test_UpdateUser()[pri:3, instance:api.test.userTest@e3b0369]">test_UpdateUser</td> 
-  <td>main@817994751</td>   <td></td> </tr>
+<tr bgcolor="8fad79">  <td>23/10/08 19:13:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="storeTest.createorder()[pri:1, instance:api.test.storeTest@591e58fa]">createorder</td> 
+  <td>main@2047984839</td>   <td></td> </tr>
+<tr bgcolor="8fad79">  <td>23/10/08 19:13:54</td>   <td>5364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="storeTest.getorder()[pri:2, instance:api.test.storeTest@591e58fa]">getorder</td> 
+  <td>main@2047984839</td>   <td></td> </tr>
+<tr bgcolor="8fad79">  <td>23/10/08 19:13:55</td>   <td>6768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="storeTest.getorderInventory()[pri:3, instance:api.test.storeTest@591e58fa]">getorderInventory</td> 
+  <td>main@2047984839</td>   <td></td> </tr>
 </table>
