--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8fad79">  <td>23/10/08 19:13:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="storeTest.getorder()[pri:2, instance:api.test.storeTest@591e58fa]">getorder</td> 
-  <td>main@2047984839</td>   <td></td> </tr>
-<tr bgcolor="8fad79">  <td>23/10/08 19:13:48</td>   <td>-5364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="storeTest.createorder()[pri:1, instance:api.test.storeTest@591e58fa]">createorder</td> 
-  <td>main@2047984839</td>   <td></td> </tr>
-<tr bgcolor="8fad79">  <td>23/10/08 19:13:55</td>   <td>1404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="storeTest.getorderInventory()[pri:3, instance:api.test.storeTest@591e58fa]">getorderInventory</td> 
-  <td>main@2047984839</td>   <td></td> </tr>
+<tr bgcolor="8fad79">  <td>23/11/25 16:32:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testDeleteUser()[pri:4, instance:api.test.userTest@b672aa8]">testDeleteUser</td> 
+  <td>main@449338124</td>   <td></td> </tr>
+<tr bgcolor="8fad79">  <td>23/11/25 16:31:58</td>   <td>-3017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.test_UpdateUser()[pri:3, instance:api.test.userTest@b672aa8]">test_UpdateUser</td> 
+  <td>main@449338124</td>   <td></td> </tr>
+<tr bgcolor="8fad79">  <td>23/11/25 16:31:50</td>   <td>-10891</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testPostUser()[pri:1, instance:api.test.userTest@b672aa8]">testPostUser</td> 
+  <td>main@449338124</td>   <td></td> </tr>
+<tr bgcolor="8fad79">  <td>23/11/25 16:31:50</td>   <td>-11278</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;userTest.setupUserData()[pri:0, instance:api.test.userTest@b672aa8]">&gt;&gt;setupUserData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@449338124</td>   <td></td> </tr>
+<tr bgcolor="8fad79">  <td>23/11/25 16:31:57</td>   <td>-4658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userTest.testGetUser()[pri:2, instance:api.test.userTest@b672aa8]">testGetUser</td> 
+  <td>main@449338124</td>   <td></td> </tr>
 </table>
